# PTG-agent

./: "full_name":"[^"]*"  .editorconfig  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INGEST_ME_TO_EVOLVE_pgn-core.pgn  INSTALL.md  MANIFEST.in  Makefile  README.md  README_CN.md  constraints-termux.txt  demo_epic_themes.py  demo_interactive_theme.py  doctor_cli.py  engine.py  final_test.py  incubator.py  metadata.yaml  package-lock.json  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  setup.py  test_all.py  test_basic_config.py  test_config_system.py  test_doctor.py  test_epic_system.py  test_evolution_engine.py  test_gateway_connectivity.py  test_memory_system.py  test_new_doctor.py  test_skill_system.py  test_skin_system.py  (+1 more)
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  tests.yml
akashic/: __init__.py  compass.py  config.py  constants.py  receptor.py  stargate.py
data/: prometheus.db
data/ab_tests/: 6a2a834cc663.json
data/context/: context_state.db
data/snapshots/: teach-to-grow-core-20260429-185145.json  teach-to-grow-core-20260429-185145.ttg
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ACTIVATION_PATH.md  ACTIVATION_PATH_CN.md  ENGINEERING_CONTRACT.md  G017_HATCHERY_SELF_REPLICATE.md  G017_HATCHERY_SELF_REPLICATE_CN.md  NEXT_PHASE_PLAN.md  PEER_MESH_ROLLOUT_PLAN.md  PROTOCOL_CONTRACT.json  RUNTIME_AND_BUILD_PLAN.md  init-skill-integration.md
docs_internal/: api-reference.md  browser_integration.md  carbon-silicon-translation.md  file_structure_optimization.md  hybrid_storage_plan.md  knowledge_system_integration_plan.md  prometheus_deep_scan_verification.md  prometheus_vs_hermes_analysis.md  prometheus_vs_openclaw_analysis.md  usage-guide.md
docs_internal/old_reports/: CLI_FIX_REPORT.md  CODE_REVIEW_REPORT.md  FINAL_CODE_REVIEW_REPORT.md  MIGRATION_COMPLETE.md  REFACTORING_COMPLETE.md  batch_migrate.sh  check_tools_imports.py  code_review.py  final_comprehensive_test.py  fix_python39.sh  fix_remaining.sh  fix_utc.sh  fix_utc2.py  verify_cli.py  verify_migration.py
hatchery/: engine.py  incubator.py  metadata.yaml  stargate_identity.py  stargate_transport.py
progenitor-protocol/: README.md  pgn-core.pgn
progenitor-protocol/src/: metadata.yaml
prometheus/: __init__.py  _paths.py  _state.py  acp_server.py  agent_loop.py  auth_manager.py  auto_snapshot.py  auto_update.py  auxiliary_client.py  batch_runner.py  browser_connect.py  checkpoint_system.py  chronicler.py  claw_migration.py  clipboard.py  completion.py  config.py  config.yaml  constants.py  constants_core.py  context_compressor.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  curator.py  debug.py  debug_report.py  display.py  display_rich.py  doctor.py  doctor_cli.py  env_loader.py  error_classifier.py  evolution_engine.py  file_safety.py  gateway_daemon.py  gateway_manager.py  gemini_cloudcode_adapter.py  gemini_schema.py  (+77 more)
prometheus/accelerator/: __init__.py  net_accelerator.py
prometheus/acp_adapter/: __main__.py  auth.py  entry.py  events.py  permissions.py  server.py  session.py  tools.py
prometheus/acp_registry/: agent.json
prometheus/agent/: account_usage.py  anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py  codex_responses_adapter.py  context_compressor.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  display.py  error_classifier.py  failover.py  gemini_native_adapter.py  google_code_assist.py  google_oauth.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  iteration_budget.py  lazy_imports.py  lmstudio_reasoning.py  memory_manager.py  memory_provider.py  memory_utils.py  model_metadata.py  models_dev.py  moonshot_schema.py  nous_rate_guard.py  onboarding.py  prompt_builder.py  prompt_cache.py  prompt_caching.py  proxy_config.py  rate_limit_tracker.py  redact.py  resource_cleanup.py  retry_utils.py  (+10 more)
prometheus/agents/: __init__.py  manager.py
prometheus/bootstrap/: __init__.py  onboard.py  workspace.py
prometheus/channels/: __init__.py  base.py  manager.py  registry.py
prometheus/cli/: __init__.py  _parser.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  browser_connect.py  callbacks.py  claw.py  cli_output.py  clipboard.py  codex_models.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  debug.py  default_soul.py  dingtalk_auth.py  doctor.py  dump.py  dynamic_models.py  env_loader.py  fallback_cmd.py  gateway_cmd.py  hooks.py  kanban.py  kanban_db.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_catalog.py  model_normalize.py  model_switch.py  (+27 more)
prometheus/codec/: __init__.py  layer1.py  layer2.py
prometheus/compiler/: __init__.py  citation.py  discovery.py  prompt.py  weaver.py
prometheus/cron/: jobs.py  scheduler.py
prometheus/display/: __init__.py  banner.py  tool_display.py
prometheus/docs/: G000-origin.md  api-reference.md  hybrid_storage_plan.md  wiki_compiler_mempalace_integration_plan.md  xget_integration_guide.md  碳硅转译知识库终极版.md
prometheus/environments/: __init__.py  agent_loop.py  agentic_opd_env.py  patches.py  prometheus_base_env.py  tool_context.py  web_research_env.py
prometheus/framework/: __init__.py  evolution_guard.py  firekeeper.py  lifecycle.py  soul_orchestrator.py
prometheus/gateway/: api_server.py  channel_directory.py  config.py  delivery.py  display_config.py  helpers.py  hooks.py  metrics.py  mirror.py  pairing.py  platform_registry.py  redis_stream.py  restart.py  run.py  runtime_footer.py  session.py  (+5 more)
scripts/: archive_removed_tests.py  batch_skip_tests.py  check_import_paths.py  fix_broken_test_files.py  fix_chinese_punctuation.py  fix_genes_imports.py  fix_skip_markers.py  fix_test_hermes_refs.py  fix_test_imports.py  install.sh
seed-vault/: khazix-writer.ttg
seeds/: teach-to-grow-core.ttg
src/: engine.py  manifesto.md  metadata.yaml
tests/: __init__.py  conftest.py
(+3282 files in other folders)
